hello-world-deployment.02.yaml
---
# hello-kubernetes.custom-message.yaml
#service
apiVersion: v1
kind: Service
metadata:
  name: service-hello-world-02
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-world-02
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-02
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: hello-world-02
  template:
    metadata:
      labels:
        app: hello-world-02
    spec:
      #persistent volume
      volumes:
      - name: pv-caas-poc
        persistentVolumeClaim:
          claimName: pvc-caas-poc-02
      containers:
      - name: hello-world-test
        image: harbor.frontedge.net/poc-caas-05/hello-kubernetes
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /data
          name: pv-caas-poc
        resources:
        #resources to autoscaler
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
#ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-caas-02
spec:
  ingressClassName: nginx
  rules:
  - host: poc-caas-02.apps.k8s-001.frontedge.net
    http:
      paths:
      - backend:
          service:
            name: service-hello-world-02
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
---
