hello-world-deployment.yaml
---
# hello-kubernetes.custom-message.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-hello-world-03
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: caas-poc-03
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-03
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-03
  template:
    metadata:
      labels:
        app: hello-world-03
    spec:
      containers:
      - name: hello-world-03
        image: harbor.frontedge.net/poc-caas/hello-kubernetes
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-caas-03
spec:
  ingressClassName: nginx
  rules:
  - host: poc-caas-03.apps.k8s-001.frontedge.net
    http:
      paths:
      - backend:
          service:
            name: service-hello-world-03
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
---
